# OmniSagaCode

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ctf.db  ctfapp.db  flag.txt  hidden_flag2.txt  profileInstalled  secure_flags.db  storeFlag.kt
app/src/main/assets/databases/: ctf_hidden.db  flagdb  insecure.db  secure.db  vulnerable.db
app/src/main/assets/files/: .hiddenA  sysconfig.tmp
app/src/main/cpp/: CMakeLists.txt  getme.cpp  license.cpp  native-lib.cpp
app/src/main/java/com/example/ctfapp/: AESUtils.kt  AmigoActivity.kt  CreditsActivity.kt  DashboardActivity.kt  DataHelper.kt  DeeplinkHandlerActivity.kt  FightActivity.kt  FileUtils.kt  FlagManager.kt  FlagUtils.kt  GlobalCounter.kt  InSecureDB.kt  InsecureActivity.kt  LicenseActivity.kt  LoginActivity.kt  MainActivity.kt  (+16 more)
app/src/main/res/layout/: activity_amigo.xml  activity_credits.xml  activity_dashboard.xml  activity_deeplink_handler.xml  activity_fight.xml  activity_insecure.xml  activity_license.xml  activity_login.xml  activity_main.xml  activity_next.xml  activity_pin.xml  activity_secret_manager.xml  activity_stegno.xml  activity_vulnerable_service.xml  activity_welcome.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
